# fastapi-dynamodb-template

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py  settings.py  tables.py
app/tests/: test_main.py
