[tool.poetry]
name = "fastapi-dynamodb"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.103.1"
pynamodb = "5.5.0"
uvicorn = "0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^23.9.1"
isort = "^5.12.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
